fix: remove flex gap property

--- a/components/ui/breadcrumbs.module.css
+++ b/components/ui/breadcrumbs.module.css
@@ -24,6 +24,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .breadcrumbs__list {
+    display: none;
+  }
+
   .breadcrumbs__item {
     font-size: 10px;
     line-height: 1.4;
