--- a/styles/blocks/future-card/future-card.css
+++ b/styles/blocks/future-card/future-card.css
@@ -26,6 +26,11 @@
     padding: 8px;
     flex-grow: 1;
     justify-content: flex-start;
+    margin-bottom: 10px;
+  }
+
+  .future-card:not(:nth-child(3n + 3)) {
+    margin-right: 10px;
   }
 
   .future-card_big {
