--- a/styles/blocks/futures/__list/futures__list.css
+++ b/styles/blocks/futures/__list/futures__list.css
@@ -11,6 +11,6 @@
 
     display: flex;
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 0;
   }
 }
