--- a/styles/blocks/milestones/__item/milestones__item.css
+++ b/styles/blocks/milestones/__item/milestones__item.css
@@ -5,5 +5,6 @@
 @media screen and (max-width: 768px) {
   .milestones__item {
     flex: 0 0 160px;
+    margin-bottom: 15px;
   }
 }
