--- a/styles/blocks/milestones/__list/milestones__list.css
+++ b/styles/blocks/milestones/__list/milestones__list.css
@@ -10,6 +10,5 @@
   .milestones__list {
     display: flex;
     flex-wrap: wrap;
-    gap: 9px;
   }
 }
