--- a/styles/blocks/offices/__item/offices__item.css
+++ b/styles/blocks/offices/__item/offices__item.css
@@ -1,3 +1,9 @@
 .offices__item_has-two-columns {
   grid-column: 1 / 3;
 }
+
+@media screen and (max-width: 768px) {
+  .offices__item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
