--- a/styles/blocks/offices/__list/offices__list.css
+++ b/styles/blocks/offices/__list/offices__list.css
@@ -17,6 +17,6 @@
 
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 0;
   }
 }
